colores en crear post

--- a/htmlProvador.html
+++ b/htmlProvador.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<div class="row">
-		
+		<!--Crear POset-->
 			<div id ="crearPost" class="pageApp">
 				<nav id ="likesBarra" class="barraSuperior ">	    
 			    	<div class="row"> 
@@ -47,14 +47,32 @@
 			  			</div>
 			  			<div class="crearPostPie">
 			  				<div class="row">
-			  					<div class="col s5">imagenes </div>
-			  					<div class="col s4">Colores</div>
+			  					<div class="col s6">
+			  						
+			  							<div class="col s4">
+			  								<a><i class="material-icons">add_a_photo</i></a>
+			  							</div>
+			  							<div class="col s4">
+			  								<a><i class="material-icons">add_photo_alternate</i></a>
+			  							</div>
+			  							<div class="col s4">
+			  								<a><i class="material-icons">attach_file</i></a>
+			  							</div>
+			  						
+			  					</div>
+			  					<div class="col s6 align-right">
+			  						<div class="col s2 colorPosts none" id="crearPostColorNone" dataColor="none"></div>
+			  						<div class="col s2 colorPosts azul" id="crearPostColorNone" dataColor="azul"></div>
+			  						<div class="col s2 colorPosts verde" id="crearPostColorNone" dataColor="verde"></div>
+			  						<div class="col s2 colorPosts naranja" id="crearPostColorNone" dataColor="naranja"></div>
+			  						<div class="col s2 colorPosts rojo" id="crearPostColorNone" dataColor="rojo"></div>		
+			  					</div>
 			  				</div>
 			  			</div>
 			  		</div>	  		
 			  	</div>
 			
-			</div><!--- fin de Likes-->
+			</div><!-- fin fr CrearPpost -->
 			
 		
 	</div>
